--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 * {
     padding: 0;
     margin: 0;
@@ -7,4 +11,10 @@
 a {
     text-decoration: none;
     color: inherit;
+}
+
+.app {
+    min-height: 100vh;
+    color: white;
+    background: linear-gradient(#130764, #261c3e, #01232e);
 }
